[package]
name = "apca"
version = "0.30.0"
edition = "2021"
rust-version = "1.63"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/apca"
repository = "https://github.com/d-e-s-o/apca.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["trading", "finance", "async", "stocks"]
description = """
A crate for interacting with the Alpaca API.
"""
include = ["src/**/*", "LICENSE", "README.*", "CHANGELOG.*"]

[features]
default = ["gzip", "tls-native"]
gzip = ["async-compression/futures-io", "async-compression/gzip"]
tls-native = ["hyper-tls", "tungstenite/native-tls", "_openssl_unused"]
tls-rustls = ["hyper-rustls", "tungstenite/rustls-tls-webpki-roots"]
vendored-openssl = ["tls-native", "hyper-tls/vendored", "tungstenite/native-tls-vendored"]

[dependencies]
async-compression = {version = "0.4", default-features = false, optional = true}
async-trait = "0.1.51"
chrono = {version = "0.4.19", features = ["serde"]}
futures = {version = "0.3", default-features = false}
http = {version = "1.1", default-features = false}
http-body-util = {version = "0.1", default-features = false}
http-endpoint = {version = "0.6", default-features = false}
hyper = {version = "1.1", default-features = false, features = ["client", "http1"]}
hyper-util = {version = "0.1.3", default-features = false, features = ["client", "client-legacy", "http1", "tokio"]}
hyper-rustls = {version = "0.27", default-features = false, features = ["http1", "ring", "webpki-roots"], optional = true}
hyper-tls = {version = "0.6", default-features = false, optional = true}
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
serde = {version = "1.0.103", features = ["derive"]}
serde_json = {version = "1.0", default-features = false, features = ["std"]}
serde_urlencoded = {version = "0.7", default-features = false}
serde_variant = {version = "0.1", default-features = false}
thiserror = "2.0"
tokio = {version = "1.13", default-features = false, features = ["net"]}
tracing = {version = "0.1", default-features = false, features = ["attributes", "std"]}
tracing-futures = {version = "0.2", default-features = false, features = ["std-future"]}
tungstenite = {package = "tokio-tungstenite", version = "0.26", default-features = false, features = ["connect", "url"]}
url = "2.0"
uuid = {version = "1.0", default-features = false, features = ["serde"]}
websocket-util = "0.14"
# error: pasting "RUST_VERSION_OPENSSL_" and "(" does not give a valid preprocessing token
_openssl_unused = {package = "openssl", version = "0.10.35", optional = true}

[dev-dependencies]
serial_test = {version = "3.0.0", default-features = false}
test-log = {version = "0.2.14", default-features = false, features = ["trace"]}
tokio = {version = "1.13", default-features = false, features = ["rt-multi-thread", "macros"]}
uuid = {version = "1.0", default-features = false, features = ["v4"]}
websocket-util = {version = "0.14", features = ["test"]}

# A set of unused dependencies that we require to force correct minimum versions
# of transitive dependencies, for cases where our dependencies have incorrect
# dependency specifications themselves.
# error[E0277]: the trait bound `Version: From<({integer}, {integer}, {integer})>` is not satisfied
_rustc_version_unused = { package = "rustc_version", version = "0.2.2" }
# error[E0308]: mismatched types
_num_bigint_unused = { package = "num-bigint", version = "0.4.2" }
# error[E0635]: unknown feature `proc_macro_span_shrink`
_proc_macro2_unused = { package = "proc-macro2", version = "1.0.60" }
